# resolvematrix

./: .pre-commit-config.yaml  Cargo.toml  README.md  README.tpl  committed.toml
.forgejo/workflows/: prek-checks.yaml
examples/: builder.rs  simple.rs  version.rs
src/: cache.rs  error.rs  lib.rs  resolution.rs  server.rs
