[package]
name = "resolvematrix"
version = "0.0.4"
description = "Resolve Matrix servers"
license = "MPL-2.0"
authors = ["Jade Ellis <jade@ellis.link>"]

repository = "https://forgejo.ellis.link/continuwuation/resolvematrix.git"
homepage = "https://forgejo.ellis.link/continuwuation/resolvematrix"

readme = "README.md"
edition = "2024"

rust-version = "1.88.0"

[features]
default = ["reqwest/default-tls", "hickory-resolver/system-config"]

[dependencies]
hickory-resolver = { version = "0.26.1", default-features = false, features = ["tokio"], optional = true }
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "json"] } # JSON only used for tests
serde = { version = "1.0.228", default-features = false, features = ["serde_derive"] }
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
futures = { version = "0.3.32", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
serde_json = { version = "1.0.150", default-features = false }

[dev-dependencies]
assertables = "10.1.0"
rstest = "0.26.1"
tracing-subscriber = "0.3.23"
tokio = { version = "1.50.0", default-features = false, features = ["tokio-macros", "test-util"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config"] }
httpmock = { version = "0.8.3", default-features = false, features = ["https", "http2"] }
rustls = { version = "0.23.41", features = ["aws_lc_rs"], default-features = true }
